# ai-video-dev

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  push-to-github.sh  pyproject.toml  requirements.txt
docs/: ai-guidelines.md  setup.md
examples/: analyze_and_grade.py  compile_with_audio.py  full_pipeline.py  grade_all_clips.py
grades/: Blue Sky - Daytime Scenic.txt  Cool Dramatic - Sunset Ocean.txt  Deep Ocean Blue - Aquarium.txt  Deep Teal - Ocean Water.txt  Neon Carnival - Night Fair.txt  Neon Rain - Night City.txt  Purple Punch - DJ Party.txt  Steel Blue - Night City BW.txt
src/: __init__.py  analyze.py  audio.py  compile.py  extract.py  grades.py  overlay.py
tests/: test_grades.py
