[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-video-dev"
version = "0.1.0"
description = "AI-first video editing pipeline powered by ffmpeg + Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.25",
]
dev = [
    "pytest>=7",
    "ruff",
]

[project.scripts]
aivid = "cli:cli"

[project.urls]
Homepage = "https://github.com/manojelango/ai-video-dev"
Issues = "https://github.com/manojelango/ai-video-dev/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
